secured authentication implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
+#Global configuration
 spring.application.name=paymybuddy
+
+#Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/pay_my_buddy
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.show-sql=true
+
+#Log level configuration
+#logging.level.org.springframework=ERROR
