--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 
 #Log level configuration
-#logging.level.org.springframework=ERROR
+logging.level.org.springframework=ERROR
